--- a/FEM/variazioni_materiali/test_mat_n2/C_om_2.tex
+++ b/FEM/variazioni_materiali/test_mat_n2/C_om_2.tex
@@ -1,4 +1,4 @@
-%% AMS-LaTeX Created with the Wolfram Language : www.wolfram.com
+%% AMS-LaTeX Created with the Wolfram Language for Students - Personal Use Only : www.wolfram.com
 
 \documentclass{article}
 \usepackage{amsmath, amssymb, graphics, setspace}
@@ -11,9 +11,9 @@
 
 \[\left(
 \begin{array}{ccc}
- 757.265 & 81.2496 & 0.0000655205 \\
- 81.2496 & 757.264 & -0.00928104 \\
- 0.0000655205 & -0.00928104 & 40.9882 \\
+ 95.6279 & 4.47107 & -0.00069259 \\
+ 4.47107 & 95.6324 & -0.0107156 \\
+ -11.6779 & -11.6782 & 49.028 \\
 \end{array}
 \right)\]
 
