--- a/FEM/variazioni_materiali/test_mat_n2/C_om_1.tex
+++ b/FEM/variazioni_materiali/test_mat_n2/C_om_1.tex
@@ -1,4 +1,4 @@
-%% AMS-LaTeX Created with the Wolfram Language : www.wolfram.com
+%% AMS-LaTeX Created with the Wolfram Language for Students - Personal Use Only : www.wolfram.com
 
 \documentclass{article}
 \usepackage{amsmath, amssymb, graphics, setspace}
@@ -11,9 +11,9 @@
 
 \[\left(
 \begin{array}{ccc}
- 756.787 & 80.9044 & 0.0000658817 \\
- 80.9044 & 756.786 & -0.00928504 \\
- 0.0000658817 & -0.00928504 & 40.8758 \\
+ 103.593 & 105.159 & -0.000750255 \\
+ 4.84327 & 983.764 & -0.0116089 \\
+ -12.6494 & -0.0116089 & 53.1047 \\
 \end{array}
 \right)\]
 
